CppBridge/library.h

_declspec(dllexport) int __stdcall TL_Engine_GetLastFunctionId();
_declspec(dllexport) asIScriptFunction * __stdcall TL_Engine_GetFunctionById(int funcId);
_declspec(dllexport) int __stdcall TL_Engine_GetTypeIdByDecl(const char *decl);
_declspec(dllexport) const char * __stdcall TL_Engine_GetTypeDeclaration(int typeId, bool includeNamespace);
_declspec(dllexport) int __stdcall TL_Engine_GetSizeOfPrimitiveType(int typeId);
_declspec(dllexport) asITypeInfo * __stdcall TL_Engine_GetTypeInfoById(int typeId);
_declspec(dllexport) asITypeInfo * __stdcall TL_Engine_GetTypeInfoByName(const char *name);
_declspec(dllexport) asITypeInfo * __stdcall TL_Engine_GetTypeInfoByDecl(const char *decl);
_declspec(dllexport) asIScriptContext * __stdcall TL_Engine_CreateContext();
_declspec(dllexport) void * __stdcall TL_Engine_CreateScriptObject(const asITypeInfo *type);
_declspec(dllexport) void * __stdcall TL_Engine_CreateScriptObjectCopy(void *obj, const asITypeInfo *type);
_declspec(dllexport) void * __stdcall TL_Engine_CreateUninitializedScriptObject(const asITypeInfo *type);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Engine_CreateDelegate(asIScriptFunction *func, void *obj);
_declspec(dllexport) int __stdcall TL_Engine_AssignScriptObject(void *dstObj, void *srcObj, const asITypeInfo *type);
_declspec(dllexport) void __stdcall TL_Engine_ReleaseScriptObject(void *obj, const asITypeInfo *type);
_declspec(dllexport) void __stdcall TL_Engine_AddRefScriptObject(void *obj, const asITypeInfo *type);
_declspec(dllexport) int __stdcall TL_Engine_RefCastObject(void *obj, asITypeInfo *fromType, asITypeInfo *toType, void **newPtr,
                                      bool useOnlyImplicitCast);
_declspec(dllexport) asILockableSharedBool * __stdcall TL_Engine_GetWeakRefFlagOfScriptObject(void *obj, const asITypeInfo *type);
_declspec(dllexport) asIScriptContext * __stdcall TL_Engine_RequestContext();
_declspec(dllexport) void __stdcall TL_Engine_ReturnContext(asIScriptContext *ctx);
_declspec(dllexport) int __stdcall TL_Engine_SetContextCallbacks(asREQUESTCONTEXTFUNC_t requestCtx, asRETURNCONTEXTFUNC_t returnCtx,
                                            void *param);
_declspec(dllexport) asETokenClass __stdcall TL_Engine_ParseToken(const char *string, size_t stringLength, asUINT *tokenLength);
_declspec(dllexport) int __stdcall TL_Engine_GarbageCollect(asDWORD flags, asUINT numIterations);
_declspec(dllexport) void __stdcall TL_Engine_GetGCStatistics(asUINT *currentSize, asUINT *totalDestroyed, asUINT *totalDetected,
                                         asUINT *newObjects, asUINT *totalNewDestroyed);
_declspec(dllexport) int __stdcall TL_Engine_NotifyGarbageCollectorOfNewObject(void *obj, asITypeInfo *type);
_declspec(dllexport) int __stdcall TL_Engine_GetObjectInGC(asUINT idx, asUINT *seqNbr, void **obj, asITypeInfo **type);
_declspec(dllexport) void __stdcall TL_Engine_GCEnumCallback(void *reference);
_declspec(dllexport) void __stdcall TL_Engine_ForwardGCEnumReferences(void *ref, asITypeInfo *type);
_declspec(dllexport) void __stdcall TL_Engine_ForwardGCReleaseReferences(void *ref, asITypeInfo *type);
_declspec(dllexport) void __stdcall TL_Engine_SetCircularRefDetectedCallback(asCIRCULARREFFUNC_t callback, void *param);
_declspec(dllexport) void * __stdcall TL_Engine_SetUserData(void *data, asPWORD type);
_declspec(dllexport) void * __stdcall TL_Engine_GetUserData(asPWORD type);
_declspec(dllexport) void __stdcall TL_Engine_SetEngineUserDataCleanupCallback(asCLEANENGINEFUNC_t callback, asPWORD type);
_declspec(dllexport) void __stdcall TL_Engine_SetModuleUserDataCleanupCallback(asCLEANMODULEFUNC_t callback, asPWORD type);
_declspec(dllexport) void __stdcall TL_Engine_SetContextUserDataCleanupCallback(asCLEANCONTEXTFUNC_t callback, asPWORD type);
_declspec(dllexport) void __stdcall TL_Engine_SetFunctionUserDataCleanupCallback(asCLEANFUNCTIONFUNC_t callback, asPWORD type);
_declspec(dllexport) void __stdcall TL_Engine_SetTypeInfoUserDataCleanupCallback(asCLEANTYPEINFOFUNC_t callback, asPWORD type);
_declspec(dllexport) void __stdcall TL_Engine_SetScriptObjectUserDataCleanupCallback(asCLEANSCRIPTOBJECTFUNC_t callback, asPWORD type);
_declspec(dllexport) int __stdcall TL_Engine_SetTranslateAppExceptionCallback(const asSFuncPtr *callback, void *param, int callConv);
_declspec(dllexport) asIScriptEngine * __stdcall TL_Module_GetEngine(const asIScriptModule *module);
_declspec(dllexport) void __stdcall TL_Module_SetName(asIScriptModule *module, const char *name);
_declspec(dllexport) const char * __stdcall TL_Module_GetName(const asIScriptModule *module);
_declspec(dllexport) void __stdcall TL_Module_Discard(asIScriptModule *module);
_declspec(dllexport) int __stdcall TL_Module_AddScriptSection(asIScriptModule *module, const char *name, const char *code, size_t codeLength,
                                         int lineOffset);
_declspec(dllexport) int __stdcall TL_Module_Build(asIScriptModule *module);
_declspec(dllexport) int __stdcall TL_Module_CompileFunction(asIScriptModule *module, const char *sectionName, const char *code,
                                        int lineOffset, asDWORD compileFlags, asIScriptFunction **outFunc);
_declspec(dllexport) int __stdcall TL_Module_CompileGlobalVar(asIScriptModule *module, const char *sectionName, const char *code,
                                         int lineOffset);
_declspec(dllexport) asDWORD __stdcall TL_Module_SetAccessMask(asIScriptModule *module, asDWORD accessMask);
_declspec(dllexport) int __stdcall TL_Module_SetDefaultNamespace(asIScriptModule *module, const char *nameSpace);
_declspec(dllexport) const char * __stdcall TL_Module_GetDefaultNamespace(const asIScriptModule *module);
_declspec(dllexport) asUINT __stdcall TL_Module_GetFunctionCount(const asIScriptModule *module);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Module_GetFunctionByIndex(const asIScriptModule *module, asUINT index);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Module_GetFunctionByDecl(const asIScriptModule *module, const char *decl);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Module_GetFunctionByName(const asIScriptModule *module, const char *name);
_declspec(dllexport) int __stdcall TL_Module_RemoveFunction(asIScriptModule *module, asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Module_ResetGlobalVars(asIScriptModule *module, asIScriptContext *ctx);
_declspec(dllexport) asUINT __stdcall TL_Module_GetGlobalVarCount(const asIScriptModule *module);
_declspec(dllexport) int __stdcall TL_Module_GetGlobalVarIndexByName(const asIScriptModule *module, const char *name);
_declspec(dllexport) int __stdcall TL_Module_GetGlobalVarIndexByDecl(const asIScriptModule *module, const char *decl);
_declspec(dllexport) const char * __stdcall TL_Module_GetGlobalVarDeclaration(const asIScriptModule *module, asUINT index,
                                                         bool includeNamespace);
_declspec(dllexport) int __stdcall TL_Module_GetGlobalVar(const asIScriptModule *module, asUINT index, const char **name,
                                     const char **nameSpace,
                                     int *typeId, bool *isConst);