CsharpLoader/ACL/Private/NativeBindings.cs


    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetLastFunctionId")]
    internal static partial int TL_Engine_GetLastFunctionId();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetFunctionById")]
    internal static partial IntPtr TL_Engine_GetFunctionById(int funcId);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetTypeIdByDecl")]
    internal static partial int TL_Engine_GetTypeIdByDecl(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetTypeDeclaration")]
    internal static partial IntPtr TL_Engine_GetTypeDeclaration(
        int typeId,
        [MarshalAs(UnmanagedType.Bool)] bool includeNamespace);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetSizeOfPrimitiveType")]
    internal static partial int TL_Engine_GetSizeOfPrimitiveType(int typeId);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetTypeInfoById")]
    internal static partial IntPtr TL_Engine_GetTypeInfoById(int typeId);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetTypeInfoByName")]
    internal static partial IntPtr TL_Engine_GetTypeInfoByName(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetTypeInfoByDecl")]
    internal static partial IntPtr TL_Engine_GetTypeInfoByDecl(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_CreateContext")]
    internal static partial IntPtr TL_Engine_CreateContext();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_CreateScriptObject")]
    internal static partial IntPtr TL_Engine_CreateScriptObject(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_CreateScriptObjectCopy")]
    internal static partial IntPtr TL_Engine_CreateScriptObjectCopy(
        IntPtr obj,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_CreateUninitializedScriptObject")]
    internal static partial IntPtr TL_Engine_CreateUninitializedScriptObject(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_CreateDelegate")]
    internal static partial IntPtr TL_Engine_CreateDelegate(
        IntPtr func,
        IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_AssignScriptObject")]
    internal static partial int TL_Engine_AssignScriptObject(
        IntPtr dstObj,
        IntPtr srcObj,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_ReleaseScriptObject")]
    internal static partial void TL_Engine_ReleaseScriptObject(
        IntPtr obj,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_AddRefScriptObject")]
    internal static partial void TL_Engine_AddRefScriptObject(
        IntPtr obj,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RefCastObject")]
    internal static partial int TL_Engine_RefCastObject(
        IntPtr obj,
        IntPtr fromType,
        IntPtr toType,
        IntPtr newPtr,
        [MarshalAs(UnmanagedType.Bool)] bool useOnlyImplicitCast);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetWeakRefFlagOfScriptObject")]
    internal static partial IntPtr TL_Engine_GetWeakRefFlagOfScriptObject(
        IntPtr obj,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RequestContext")]
    internal static partial IntPtr TL_Engine_RequestContext();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_ReturnContext")]
    internal static partial void TL_Engine_ReturnContext(IntPtr ctx);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetContextCallbacks")]
    internal static partial int TL_Engine_SetContextCallbacks(
        IntPtr requestCtx,
        IntPtr returnCtx,
        IntPtr param);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_ParseToken")]
    internal static partial int TL_Engine_ParseToken(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string str,
        nuint stringLength,
        IntPtr tokenLength);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GarbageCollect")]
    internal static partial int TL_Engine_GarbageCollect(uint flags, uint numIterations);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGCStatistics")]
    internal static partial void TL_Engine_GetGCStatistics(
        IntPtr currentSize,
        IntPtr totalDestroyed,
        IntPtr totalDetected,
        IntPtr newObjects,
        IntPtr totalNewDestroyed);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_NotifyGarbageCollectorOfNewObject")]
    internal static partial int TL_Engine_NotifyGarbageCollectorOfNewObject(
        IntPtr obj,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetObjectInGC")]
    internal static partial int TL_Engine_GetObjectInGC(
        uint idx,
        IntPtr seqNbr,
        IntPtr obj,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GCEnumCallback")]
    internal static partial void TL_Engine_GCEnumCallback(IntPtr reference);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_ForwardGCEnumReferences")]
    internal static partial void TL_Engine_ForwardGCEnumReferences(
        IntPtr refPtr,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_ForwardGCReleaseReferences")]
    internal static partial void TL_Engine_ForwardGCReleaseReferences(
        IntPtr refPtr,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetCircularRefDetectedCallback")]
    internal static partial void TL_Engine_SetCircularRefDetectedCallback(
        IntPtr callback,
        IntPtr param);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetUserData")]
    internal static partial IntPtr TL_Engine_SetUserData(
        IntPtr data,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetUserData")]
    internal static partial IntPtr TL_Engine_GetUserData(IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetEngineUserDataCleanupCallback")]
    internal static partial void TL_Engine_SetEngineUserDataCleanupCallback(
        IntPtr callback,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetModuleUserDataCleanupCallback")]
    internal static partial void TL_Engine_SetModuleUserDataCleanupCallback(
        IntPtr callback,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetContextUserDataCleanupCallback")]
    internal static partial void TL_Engine_SetContextUserDataCleanupCallback(
        IntPtr callback,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetFunctionUserDataCleanupCallback")]
    internal static partial void TL_Engine_SetFunctionUserDataCleanupCallback(
        IntPtr callback,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetTypeInfoUserDataCleanupCallback")]
    internal static partial void TL_Engine_SetTypeInfoUserDataCleanupCallback(
        IntPtr callback,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetScriptObjectUserDataCleanupCallback")]
    internal static partial void TL_Engine_SetScriptObjectUserDataCleanupCallback(
        IntPtr callback,
        IntPtr type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetTranslateAppExceptionCallback")]
    internal static partial int TL_Engine_SetTranslateAppExceptionCallback(
        IntPtr callback,
        IntPtr param,
        int callConv);

    #endregion

    #region Module Functions

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetEngine")]
    internal static partial IntPtr TL_Module_GetEngine(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_SetName")]
    internal static partial void TL_Module_SetName(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetName")]
    internal static partial IntPtr TL_Module_GetName(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_Discard")]
    internal static partial void TL_Module_Discard(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_AddScriptSection")]
    internal static partial int TL_Module_AddScriptSection(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string code,
        nuint codeLength,
        int lineOffset);

    [LibraryImport(DllName, EntryPoint = "TL_Module_Build")]
    internal static partial int TL_Module_Build(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_CompileFunction")]
    internal static partial int TL_Module_CompileFunction(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string sectionName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string code,
        int lineOffset,
        uint compileFlags,
        IntPtr outFunc);

    [LibraryImport(DllName, EntryPoint = "TL_Module_CompileGlobalVar")]
    internal static partial int TL_Module_CompileGlobalVar(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string sectionName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string code,
        int lineOffset);

    [LibraryImport(DllName, EntryPoint = "TL_Module_SetAccessMask")]
    internal static partial uint TL_Module_SetAccessMask(IntPtr module, uint accessMask);

    [LibraryImport(DllName, EntryPoint = "TL_Module_SetDefaultNamespace")]
    internal static partial int TL_Module_SetDefaultNamespace(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string nameSpace);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetDefaultNamespace")]
    internal static partial IntPtr TL_Module_GetDefaultNamespace(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetFunctionCount")]
    internal static partial uint TL_Module_GetFunctionCount(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetFunctionByIndex")]
    internal static partial IntPtr TL_Module_GetFunctionByIndex(IntPtr module, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetFunctionByDecl")]
    internal static partial IntPtr TL_Module_GetFunctionByDecl(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetFunctionByName")]
    internal static partial IntPtr TL_Module_GetFunctionByName(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllName, EntryPoint = "TL_Module_RemoveFunction")]
    internal static partial int TL_Module_RemoveFunction(IntPtr module, IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Module_ResetGlobalVars")]
    internal static partial int TL_Module_ResetGlobalVars(IntPtr module, IntPtr ctx);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetGlobalVarCount")]
    internal static partial uint TL_Module_GetGlobalVarCount(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetGlobalVarIndexByName")]
    internal static partial int TL_Module_GetGlobalVarIndexByName(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetGlobalVarIndexByDecl")]
    internal static partial int TL_Module_GetGlobalVarIndexByDecl(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetGlobalVarDeclaration")]
    internal static partial IntPtr TL_Module_GetGlobalVarDeclaration(
        IntPtr module,
        uint index,
        [MarshalAs(UnmanagedType.Bool)] bool includeNamespace);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetGlobalVar")]
    internal static partial int TL_Module_GetGlobalVar(
        IntPtr module,
        uint index,
        IntPtr name,
        IntPtr nameSpace,
        IntPtr typeId,
        IntPtr isConst);
